[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/PlayerDisplay.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.1, 0.1, 0.1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="PlayerDisplay" type="Control"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 50.0
script = ExtResource("1_script")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Player Name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="RolePanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 5.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 0

[node name="RoleLabel" type="Label" parent="RolePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
text = "Role"
horizontal_alignment = 1
vertical_alignment = 1
